[gd_scene format=3 uid="uid://bew1y4fntq72n"]

[ext_resource type="Script" uid="uid://bj8gbf8c3jyjx" path="res://Scripts/menu_container.gd" id="1_4k4du"]
[ext_resource type="Script" uid="uid://dmu47rkxacsts" path="res://Scripts/control.gd" id="1_kag2x"]
[ext_resource type="Texture2D" uid="uid://dsc16lnqq2k83" path="res://assets/buttons/Играть1.png" id="1_l7dqm"]
[ext_resource type="Texture2D" uid="uid://dgb5vie33gstv" path="res://assets/buttons/Настройки1.png" id="2_m6dxm"]
[ext_resource type="Texture2D" uid="uid://d3gg35deaxfh6" path="res://assets/buttons/Выход1.png" id="3_4k4du"]
[ext_resource type="AudioStream" uid="uid://ben728pkwxmem" path="res://music/HouseWife.mp3" id="4_m6dxm"]

[node name="Control" type="Control" unique_id=2136611938]
layout_mode = 3
anchors_preset = 0
offset_right = 481.0
offset_bottom = 271.0
script = ExtResource("1_kag2x")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=928905122]
layout_mode = 0
offset_left = 186.0
offset_top = 65.0
offset_right = 290.0
offset_bottom = 197.0
script = ExtResource("1_4k4du")

[node name="PlayButton" type="Button" parent="VBoxContainer" unique_id=1229971097]
layout_mode = 2
icon = ExtResource("1_l7dqm")
flat = true

[node name="SettingsButton" type="Button" parent="VBoxContainer" unique_id=1196721072]
layout_mode = 2
icon = ExtResource("2_m6dxm")
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer" unique_id=318017440]
layout_mode = 2
icon = ExtResource("3_4k4du")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer" unique_id=1348263913]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="." unique_id=746728133]
layout_mode = 0
offset_right = 482.0
offset_bottom = 272.0

[node name="HouseWife" type="AudioStreamPlayer2D" parent="." unique_id=558760028]
position = Vector2(238, 47)
stream = ExtResource("4_m6dxm")
autoplay = true
parameters/looping = true
